masonry component 적용 + UI 수정

--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -837,7 +837,7 @@ ol {
 
 /* footer */
 .footer {
-    position: absolute;
+    /* position: absolute; */
     left: 0;
     right: 0;
     bottom: 0;
