--- a/public/css/font.css
+++ b/public/css/font.css
@@ -27,3 +27,29 @@
         url(../fonts/NotoSansKR-Bold.woff) format('woff'),
         url(../fonts/NotoSansKR-Bold.otf) format('opentype');
 }
+/* josefin-sans-regular - latin */
+@font-face {
+    font-family: 'Josefin Sans';
+    font-style: normal;
+    font-weight: 400;
+    src: url('../fonts/josefin-sans-v15-latin-regular.eot'); /* IE9 Compat Modes */
+    src: local(''),
+         url('../fonts/josefin-sans-v15-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+         url('../fonts/josefin-sans-v15-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+         url('../fonts/josefin-sans-v15-latin-regular.woff') format('woff'), /* Modern Browsers */
+         url('../fonts/josefin-sans-v15-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+         url('../fonts/josefin-sans-v15-latin-regular.svg#JosefinSans') format('svg'); /* Legacy iOS */
+  }
+  /* josefin-sans-600 - latin */
+  @font-face {
+    font-family: 'Josefin Sans';
+    font-style: normal;
+    font-weight: 600;
+    src: url('../fonts/josefin-sans-v15-latin-600.eot'); /* IE9 Compat Modes */
+    src: local(''),
+         url('../fonts/josefin-sans-v15-latin-600.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+         url('../fonts/josefin-sans-v15-latin-600.woff2') format('woff2'), /* Super Modern Browsers */
+         url('../fonts/josefin-sans-v15-latin-600.woff') format('woff'), /* Modern Browsers */
+         url('../fonts/josefin-sans-v15-latin-600.ttf') format('truetype'), /* Safari, Android, iOS */
+         url('../fonts/josefin-sans-v15-latin-600.svg#JosefinSans') format('svg'); /* Legacy iOS */
+  }
