[FUNLAB] Detail 마크업 적용

--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -91,10 +91,11 @@ ol {
     height: 40px;
     transition: width 0.15s;
 }
-.box-search.active .text, 
+.box-search.active .text,
 .box-search .text:focus {
     padding: 0 40px 0 20px;
     width: 400px;
+    border-bottom: 1px solid #000000;
 }
 .box-search .btn-search-del {
     display: none;
@@ -225,7 +226,7 @@ ol {
     height: 14px;
     opacity: 0.7;
     background-repeat: no-repeat;
-    background-position: center center; 
+    background-position: center center;
     background-size: contain;
 }
 .menu-swiper .slick-arrow.slick-disabled {
@@ -470,23 +471,31 @@ ol {
     color: #000000;
     border: 1px solid #b2b2b2;
 }
-.body-cont.show-detail {
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
-}
-.body-cont.show-detail .cont-list {
-    width: calc(100% - 555px);
-}
+
 .cont-detail {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+    background: rgba(0,0,0,0.45);
+    z-index: 99;
+
+}
+.cont-detail .detail-inner {
     overflow: hidden;
     position: relative;
     overflow-y: auto;
     margin: 8px 0 0;
-    padding: 0 20px 0 25px;
+    padding: 20px 20px 0 25px;
     width: 555px;
     border-left: 1px solid #d0d0d0;
     background: #ffffff;
+    margin: auto;
+    height: 80vh;
 }
 .btn-close-detail {
     position: absolute;
@@ -677,7 +686,7 @@ ol {
     margin: 15px 0 0;
 }
 .spec-accr li strong {
-    margin: 0 0 10px; 
+    margin: 0 0 10px;
     font-size: 12px;
     font-weight: bold;
 }
@@ -790,12 +799,12 @@ ol {
     height: 3px;
     border-radius: 3px;
     overflow: hidden;
-    
+
     background-color: #dddddd;
     background-image: linear-gradient(to right, #9e9e9e, #9e9e9e);
     background-repeat: no-repeat;
     background-size: 0 100%;
-    
+
     transition: background-size .4s ease-in-out;
 }
 .detail-dealer .sr-only {
@@ -1035,7 +1044,7 @@ ol {
     width: 1px;
     height: 16px;
     margin: auto;
-    background: rgba(0,0,0,0.9);   
+    background: rgba(0,0,0,0.9);
 }
 .popHead .btn-close:before {
     transform: rotate(45deg);
@@ -1272,7 +1281,7 @@ ol {
 /* mobile */
 @media screen and (max-width: 767px) {
     /* common */
-    html, 
+    html,
     body {
         font-size: 10px;
     }
@@ -1475,8 +1484,12 @@ ol {
         width: 100vw;
     }
     .cont-detail {
+        display: block;
+        position: static;
+    }
+    .cont-detail .detail-inner {
         position: fixed;
-        left: 100%;
+        left: 0;
         top: 11.077vw;
         margin: 0;
         padding: 0;
@@ -1610,14 +1623,14 @@ ol {
     .info-deal dd:first-of-type {
         margin: 2.899vw 0 0;
     }
-    .detail-dealer .slick-prev, 
+    .detail-dealer .slick-prev,
     .detail-dealer .slick-next {
         top: 16.908vw;
         width: 7.246vw;
         height: 7.246vw;
         z-index: 10;
     }
-    .detail-dealer .slick-prev:after, 
+    .detail-dealer .slick-prev:after,
     .detail-dealer .slick-next:after {
         width: 3.623vw;
         height: 3.623vw;
@@ -1763,7 +1776,7 @@ ol {
     }
     .txt-share dd {
         margin: 1.208vw 0 0;
-        font-size: 1.1rem;      
+        font-size: 1.1rem;
     }
     .txt-share dd a {
         display: block;
@@ -1791,14 +1804,9 @@ ol {
         position: static;
         margin: 0 2vw 0 0;
         padding: 0;
-        width: 0;
         display: flex;
         flex-direction: column;
         background: rgba(255,255,255,0.95);
-        opacity: 0;
-        z-index: -1;
-        visibility: hidden;
-        transition: opacity 0.15s, top 0.15s;
         border-bottom: 0.483vw solid #cfcfcf;
     }
     .box-search.active {
@@ -1810,21 +1818,23 @@ ol {
     }
     .box-search .text {
         display: block;
-        padding: 2.415vw;
+        padding: 0;
         height: 4.841vw;
-        width: 100%;
-        font-size: 1.6rem;
+        width: 0;
+        font-size: 2.123vw;
         background: none;
         border-radius: 0;
     }
     .box-search.active .text,
     .box-search .text:focus {
         padding: 2.415vw;
+        width: 48.809vw;
+        border: none;
     }
     .box-search .btn-search-del{
         position: absolute;
         display: block;
-        top: 3.623vw;
+        top: 0.623vw;
         right: 7.246vw;
         width: 2.899vw;
         height: 2.899vw;
@@ -1945,5 +1955,21 @@ ol {
     }
     .contForward .txt-forward dd br {
         display: none;
+    }
+}
+
+@media screen and (min-width: 1432px) and (max-width: 1719px) {
+    .inner {
+        max-width: 1432px;
+    }
+}
+@media screen and (min-width: 1142px) and (max-width: 1431px) {
+    .inner {
+        max-width: 1142px;
+    }
+}
+@media screen and (min-width: 853px) and (max-width: 1142px) {
+    .inner {
+        max-width: 853px;
     }
 }
