--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -404,7 +404,7 @@ ol {
     bottom: 0;
     left: 0;
     right: 0;
-    border: 1px solid #858585;
+    /*border: 1px solid #858585;*/
     transition: opacity 0.5s;
     opacity: 0;
 }
@@ -493,6 +493,7 @@ ol {
     padding: 20px 20px 0 25px;
     width: 555px;
     border-left: 1px solid #d0d0d0;
+    border-radius: 10px;
     background: #ffffff;
     margin: auto;
     height: 80vh;
@@ -510,13 +511,13 @@ ol {
     content: '';
     position: absolute;
     width: 1px;
-    height: 20px;
+    height: 15px;
     top: 0;
     left: 0;
     right: 0;
     bottom: 0;
     margin: auto;
-    background: rgba(0,0,0,0.6);
+    background: rgba(0,0,0,0.4);
 }
 
 .btn-close-detail:before {
@@ -743,6 +744,7 @@ ol {
     font-size: 0;
     line-height: 0;
     width: 100%;
+    height:150px;
 }
 .detail-dealer .slick-arrow {
     display: none !important;
