[FRONT] body 스크롤 락 기능 추가

--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -1285,6 +1285,9 @@ ol {
     body {
         font-size: 10px;
     }
+    body.lock-scroll {
+        overflow: hidden;
+    }
     img {
         width: 100%;
     }
