[FROTN] ie브라우저 호환성 추카

--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -494,7 +494,7 @@ ol {
     width: 555px;
     border-left: 1px solid #d0d0d0;
     background: #ffffff;
-    margin: auto;
+    margin: auto 0;
     height: 80vh;
 }
 .btn-close-detail {
